Fixed headshot img size on small devices

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -106,6 +106,6 @@
     margin: 1.5rem 0;
   }
   .headshot-img {
-    width: 18rem;
+    width: 12rem;
   }
 }
